# mapnik-vector-tile

./: .gitignore  CMakeLists.txt  CMakePresets.json  install_mason.sh  vcpkg.json
cmake/: Config.cmake.in
examples/c++/: CMakeLists.txt
src/: CMakeLists.txt  vector_tile_douglas_peucker.hpp  vector_tile_is_valid.hpp
test/: CMakeLists.txt  geometry_visual_test.cpp  raster_tile.cpp  test_main.cpp  vector_tile.cpp  vector_tile_pbf.cpp  vector_tile_projection.cpp  vector_tile_rasterize.cpp
test/system/: encode_and_datasource_decode.cpp  encode_and_decode.cpp  processor_and_datasource.cpp  remove_repeated_point.cpp  round_trip.cpp  round_trip_fill_type.cpp  round_trip_simplification.cpp
test/unit/composite/: vector.cpp
test/unit/compression/: compression.cpp
test/unit/datasource-pbf/: from_layer.cpp
test/unit/decoding/: linestring.cpp  point.cpp  polygon.cpp  polygon_scaling.cpp
test/unit/encoding/: geometry_to_feature_pbf.cpp  linestring_pbf.cpp  point_pbf.cpp  polygon_pbf.cpp
test/unit/is_valid/: feature_is_valid.cpp  value_is_valid.cpp
test/unit/layer_impl/: layer.cpp
test/unit/load/: merge.cpp
test/unit/processor/: reprojection_error.cpp  scale_denom_filter.cpp  variables.cpp
test/unit/tile_impl/: tile.cpp
test/utils/: encoding_util.cpp  geometry_equal.hpp
